After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 140671 - Crash when cutting from one workbook to another and then undoing
Crash when cutting from one workbook to another and then undoing
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
unspecified
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-04-21 17:14 UTC by Robert Hutton
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: 2.3/2.4



Description Robert Hutton 2004-04-21 03:15:07 UTC
Distribution: Debian testing/unstable
Package: Gnumeric
Severity: normal
Version: GNOME2.4.1 unspecified
Gnome-Distributor: GNOME.Org
Synopsis: Crash when cutting from one workbook to another and then undoing
Bugzilla-Product: Gnumeric
Bugzilla-Component: General
Bugzilla-Version: unspecified
BugBuddy-GnomeVersion: 2.0 (2.4.0.1)
Description:
Description of the crash:
When cutting cells from one workbook to another, and then doing an undo,
gnumeric always crashes.  Does not depend on what data are being cut and
pasted.

Steps to reproduce the crash:
1. Run gnumeric (I ran from the command line)
2. In a new sheet, enter some data (doesn't matter what you enter; I
just put asdf in a couple of colums)
3. Select the cells you just entered data into.  Do cut (I did ctrl-x).
4. Create a new workbook (I did ctrl-n).
5. Paste the data into the new sheet (I did ctrl-v).
6. Undo the paste (I did ctrl-z).
7. Crash!

Expected Results:
Well, expected it to not crash.  Perhaps expected it to remove the data
from the sheet it was pasted into, but not necessarily restore it to the
sheet it was cut from.  I'm not sure if this is the desired behaviour.

How often does this happen?
Every time I do the above steps.  Doesn't matter how much data, or what
the data is.

Additional Information:
This is gnumeric running on Debian unstable, version 1.2.10-1.
Does this qualify me for a free beverage of my choice? :)  If so,
rwh@helms-deep.cable.nu :) :)


Debugging Information:

Backtrace was generated from '/usr/bin/gnumeric'

(no debugging symbols found)...Using host libthread_db library
"/lib/libthread_db.so.1".
(no debugging symbols found)...(no debugging symbols found)...(no
debugging symbols found)...(no debugging symbols found)...(no debugging
symbols found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...[Thread debugging using libthread_db enabled]
[New Thread 16384 (LWP 2677)]
(no debugging symbols found)...(no debugging symbols found)...(no
debugging symbols found)...(no debugging symbols found)...(no debugging
symbols found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...(no debugging symbols found)...(no debugging symbols
found)...0x40855bd8 in waitpid () from /lib/libpthread.so.0

Thread 1 (Thread 16384 (LWP 2677))

  • #0 waitpid
    from /lib/libpthread.so.0
  • #1 ??
    from /usr/lib/libgnomeui-2.so.0
  • #2 libgnomeui_module_info_get
    from /usr/lib/libgnomeui-2.so.0
  • #3 __pthread_sighandler
    from /lib/libpthread.so.0
  • #4 <signal handler called>
  • #5 sv_selection_extend_to
  • #6 sv_selection_set
  • #7 cmd_selection_group
  • #8 command_undo
  • #9 g_cclosure_marshal_VOID__VOID
    from /usr/lib/libgobject-2.0.so.0
  • #10 g_closure_invoke
    from /usr/lib/libgobject-2.0.so.0
  • #11 g_signal_emit_by_name
    from /usr/lib/libgobject-2.0.so.0
  • #12 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #13 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #14 gtk_widget_translate_coordinates
    from /usr/lib/libgtk-x11-2.0.so.0
  • #15 g_closure_invoke
    from /usr/lib/libgobject-2.0.so.0
  • #16 g_signal_emit_by_name
    from /usr/lib/libgobject-2.0.so.0
  • #17 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #18 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #19 _gtk_accel_group_activate
    from /usr/lib/libgtk-x11-2.0.so.0
  • #20 gtk_accel_groups_activate
    from /usr/lib/libgtk-x11-2.0.so.0
  • #21 _gtk_window_activate_key
    from /usr/lib/libgtk-x11-2.0.so.0
  • #22 _gtk_window_query_nonaccels
    from /usr/lib/libgtk-x11-2.0.so.0
  • #23 _gtk_marshal_BOOLEAN__BOXED
    from /usr/lib/libgtk-x11-2.0.so.0
  • #24 g_cclosure_new_swap
    from /usr/lib/libgobject-2.0.so.0
  • #25 g_closure_invoke
    from /usr/lib/libgobject-2.0.so.0
  • #26 g_signal_emit_by_name
    from /usr/lib/libgobject-2.0.so.0
  • #27 g_signal_emit_valist
    from /usr/lib/libgobject-2.0.so.0
  • #28 g_signal_emit
    from /usr/lib/libgobject-2.0.so.0
  • #29 gtk_widget_send_expose
    from /usr/lib/libgtk-x11-2.0.so.0
  • #30 gtk_propagate_event
    from /usr/lib/libgtk-x11-2.0.so.0
  • #31 gtk_main_do_event
    from /usr/lib/libgtk-x11-2.0.so.0
  • #32 _gdk_events_queue
    from /usr/lib/libgdk-x11-2.0.so.0
  • #33 unblock_source
    from /usr/lib/libglib-2.0.so.0
  • #34 g_main_context_dispatch
    from /usr/lib/libglib-2.0.so.0
  • #35 g_main_context_dispatch
    from /usr/lib/libglib-2.0.so.0
  • #36 g_main_loop_run
    from /usr/lib/libglib-2.0.so.0
  • #37 gtk_main
    from /usr/lib/libgtk-x11-2.0.so.0
  • #38 ??
  • #39 ??
  • #40 ??
  • #41 ??
  • #42 ??
  • #43 ??
  • #44 ??
  • #45 ??
  • #46 ??
  • #47 ??
  • #48 main
  • #0 waitpid
    from /lib/libpthread.so.0




------- Bug moved to this database by unknown@bugzilla.gnome.org 2004-04-21 13:15 -------


Unknown platform unknown. Setting to default platform "Other".
Unknown milestone "unknown" in product "Gnumeric".
   Setting to default milestone for this product, '---'
The original reporter of this bug does not have
   an account here. Reassigning to the person who moved
   it here, unknown@bugzilla.gnome.org.
   Previous reporter was rwh@helms-deep.cable.nu.
Setting to default status "UNCONFIRMED".
Setting qa contact to the default for this product.
   This bug either had no qa contact or an invalid one.

Comment 1 Djamé 2004-05-02 23:10:08 UTC
I confirm, I did the exact step the original submitter did and it also crashed....


gnumeric version : 1.2.6

I would have change to confirmed and critical if I knew how..........
Comment 2 Jody Goldberg 2004-05-03 18:45:13 UTC
I see the problem.  It's a minor stupidity that krept in.
I'll release 1.2.12 tonight with the patch.
Comment 3 Morten Welinder 2004-05-04 19:48:59 UTC
> Does this qualify me for a free beverage of my choice? :)  If so,
> rwh@helms-deep.cable.nu :) :)

From BEVERAGES:

| A tally of the beverages owed for 1.2.x
|    Beverage bounty has not begun yet
|    Check back soon

so, no, :-)  But, hey, should you run into me, I'll spring for one anyway.