http://bugzilla.gnome.org/show_bug.cgi?id=140671 we don't know the

2004-05-03  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=140671
	* src/commands.c (cmd_paste_cut_undo) : we don't know the SheetView
	  associated with the origin sheet.

	* src/selection.c (sv_selection_set) : add some safety

2004-05-03  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=136363
	* graph/gog-style.c (gog_style_apply_theme) : Do not theme the fonts
	  it over rides the user selection because there is no 'auto' flag.